# claude-costs

./: .gitignore  README.md  install.sh  pyproject.toml
config/: claude-costs.py  statusline-command.py
config/hooks/: session-cost-logger.py
src/claude_costs/: __init__.py
tests/: test_session_cost_logger.py
