[project]
name = "claude-costs"
version = "0.2.1"
description = "Interactive TUI for tracking Claude Code session costs"
readme = "README.md"
authors = [
    { name = "Ziwei Huang", email = "huang-ziwei@outlook.com" }
]
requires-python = ">=3.13"
dependencies = ["textual"]

[dependency-groups]
dev = ["pytest>=9.0.2"]

[project.scripts]
claude-costs = "claude_costs:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
